fix(YALB-1594): tighten spacing

--- a/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/components/Answer/Answer.module.css
+++ b/web/profiles/custom/yalesites_profile/modules/custom/ys_ai_chat/react/src/components/Answer/Answer.module.css
@@ -78,8 +78,8 @@
     height: auto;
     box-sizing: border-box;
     border-bottom: 1px solid hsl(213, 66%, 45%);
-    padding-bottom: 2rem;
-    margin-bottom: 2rem;
+    padding-bottom: 1.5rem;
+    margin-bottom: 1.8rem;
     gap:0.5rem;
 }
 
@@ -113,7 +113,7 @@
 
 .citationList {
     padding: 0;
-    margin: .5rem 0 0;
+    margin: 0;
     display: flex;
     flex-flow: column nowrap;
     gap: .5rem;
